
6.40  2016-01-07
  - Added SNI support to all built-in web servers. (bpmedley, sri)

6.39  2016-01-03
  - Updated links to Mojolicious website.
  - Fixed small html_unescape bug in Mojo::Util.
  - Fixed handling of invalid max age in Mojo::UserAgent::CookieJar.

6.38  2015-12-19
  - Updated prettify.js to version 8-Dec-2015.
  - Improved form generation in Mojo::UserAgent::Transactor to use UTF-8 as the
    default charset.

6.37  2015-12-14
  - Added protocol and with_protocols methods to Mojo::Transaction::WebSocket.
  - Fixed a few reference encoding bugs in Mojo::JSON.
  - Fixed a few form generation bugs in Mojo::UserAgent::Transactor.

6.36  2015-12-08
  - Improved Mojo::JSON performance slightly. (haarg)
  - Improved inactivity_timeout helper to return the current controller object.

6.35  2015-12-04
  - Removed deprecated collecting method from Mojo::UserAgent::CookieJar.
  - Fixed warnings in Mojo::Cookie::Response.

6.34  2015-12-01
  - Improved Hypnotoad to report problems that have occured during the creation
    of listen sockets.
  - Fixed bug in Mojo::DOM where the wrap method would attempt to wrap an
    HTML/XML fragment around the content of root nodes.
  - Fixed bug in Mojo::DOM where the wrap_content method would attempt to wrap
    an HTML/XML fragment around nodes that do not have children.
  - Fixed a few small formatting bugs in Mojolicious::Plugin::PODRenderer.

6.33  2015-11-22
  - Updated IO::Socket::IP requirement to 0.37 for certain bug fixes.
  - Improved renderer not to require a return value from handlers.
  - Improved helper method in Mojolicious to replace already existing helpers
    silently.

6.32  2015-11-18
  - Deprecated Mojolicious::Routes::Pattern::format_regex.
  - Added support for new HTTP status code.
  - Improved router performance.
  - Improved Mojo::DOM::CSS performance slightly. (jamadam)
  - Fixed a few case-sensitivity and An+B notation bugs in Mojo::DOM::CSS.
    (jamadam)

6.31  2015-11-13